@@ -15,6 +15,7 @@ Version 1.0.xxx (July xxth 2013)
 - Changed: Weather Underground updates now every 10 minutes
 - Fixed: possible curl bug when DNS timeouts
 - Implemented: Scenes, now have an On/Off button
+- Implemented: Scenes, Dimmer Level
 
 Version 1.0.762 (July 1th 2013)
 - Changed: Motion Sensors, Off delay now sends 'Off' to Lighting 1/6 devices, and 'No Motion' to X10 motion sensors
